Sculpt Mode uses wrong base mesh with Subdiv modifier #79914

Closed
opened 2020-08-19 12:55:48 +02:00 by Julien Kaspar · 6 comments
Member

System Information
Operating system: Linux-5.4.0-42-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-18 12:05, hash: 673b1930d8

Short description of error
When using a Subdivision Surface modifier in sculpt mode you can still sculpt on the base mesh like normal.
Unfortunately the vertices the brush is snapping to are smoothed to fit the subdivided proportions, which can give wrong and distorted sculpting results.
When using the "grab Active Vertex" option in the Grab brush the issue becomes very clear with the added overlay.
Here's a comparison with the subdivided object:

base_res.png

subdiv_cage.png

Exact steps for others to reproduce the error
Add a Suzanne object with a subdivision surface modifier. When entering sculpt mode make sure the "Deform Only" option is disabled to see the subdivided object.

**System Information** Operating system: Linux-5.4.0-42-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-18 12:05, hash: `673b1930d8` **Short description of error** When using a Subdivision Surface modifier in sculpt mode you can still sculpt on the base mesh like normal. Unfortunately the vertices the brush is snapping to are smoothed to fit the subdivided proportions, which can give wrong and distorted sculpting results. When using the "grab Active Vertex" option in the Grab brush the issue becomes very clear with the added overlay. Here's a comparison with the subdivided object: ![base_res.png](https://archive.blender.org/developer/F8793497/base_res.png) ![subdiv_cage.png](https://archive.blender.org/developer/F8793499/subdiv_cage.png) **Exact steps for others to reproduce the error** Add a Suzanne object with a subdivision surface modifier. When entering sculpt mode make sure the "Deform Only" option is disabled to see the subdivided object.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Author
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Author
Member

This is also the case when sculpting on an object with a multiresolution modifier and setting the sculpt level to 0. The targeted vertices and wires won't match up anymore.

This is also the case when sculpting on an object with a multiresolution modifier and setting the sculpt level to 0. The targeted vertices and wires won't match up anymore.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 1dc11d15a6

This issue was referenced by 1dc11d15a60b1fdb21f72c9bd39ba27e3acdb80f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-09-07 17:27:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79914
No description provided.